--- a/css/repairs.css
+++ b/css/repairs.css
@@ -330,7 +330,7 @@
     top: 0px;
     z-index: 250;
     background-color: rgba(255, 255, 255, 0.9);
-    display: none;
+    display: block;
 }
 
 .repairs-in-content {
@@ -437,6 +437,7 @@
     top: 0px;
     z-index: 250;
     background-color: rgba(255, 255, 255, 0.9);
+    display: none;
 }
 
 .anti-fake-content {
